css/main.css
/* Global Styles */

html,
body {
	width: 100%;
	height: 100%;
}

body {
	font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    max-width: 100%;
}
h1,
h2 {
	font-size: 36px;
}
h3 {
	font-size: 18px;
}
h4 {
	font-size: 24px;
}

#top {
    padding: 15px 10px;
}
.text-vertical-center {
	display: table-cell;
	text-align: center;
	vertical-align: middle;
}

.text-vertical-center h1 {
	margin: 0;
	padding: 0;
	font-size: 4.5em;
	font-weight: 700;
}

/* Custom Button Styles */

.btn-dark {
	margin: 10px;
	color: #fff;
	background-color: rgba(0, 0, 0, 0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
	color: #fff;
	background-color: rgba(51, 154, 240, .8);
}

.btn-light {
	border-radius: 0;
	color: #333;
	background-color: rgb(255, 255, 255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
	color: #333;
	background-color: rgba(255, 255, 255, 0.8);
}

.btn-info {
    color: #000;
    background-color: rgba(51, 154, 240, .8);
    border-color: rgba(51, 154, 240, .8);
}
.btn-info:hover,
.btn-info:focus,
.btn-info:active {
    background-color: rgba(51, 154, 240, .8);
    border-color: #0585ed;
}
a {
    text-decoration: none;
}
/* Side Menu */

.sidebar-wrapper {
	position: fixed;
	right: 0;
	height: 5%;
	width: 250px;
  border-radius: 10%;
  border: 4px solid rgba(51, 154, 240, .2);
	margin-right: -250px;
	overflow-y: auto;
	background: #d9e8f7;
	-webkit-transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-ms-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
	transition: all 0.4s ease 0s;
}

.sidebar-nav {
	position: absolute;
	top: 0;
	width: 250px;
	margin: 0;
	padding: 0;
	list-style: none;
}

.sidebar-nav li {
	text-indent: 20px;
	line-height: 40px;
}

.sidebar-nav li a {
	display: block;
	text-decoration: none;
	color: #999;
}

.sidebar-nav li a:hover {
	text-decoration: none;
	color: #fff;
	background: rgba(255, 255, 255, 0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
	text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
	height: 55px;
	font-size: 18px;
	line-height: 55px;
}

.sidebar-nav > .sidebar-brand a {
	color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
	color: #fff;
	background: none;
}

.main-menu-btn {
	z-index: 99;
	position: fixed;
	top: 0;
	right: 0;
}

.sidebar-wrapper.active {
	right: 180px;
	width: 250px;
	height: 37%;
	-webkit-transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-ms-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
	transition: all 0.4s ease 0s;
	z-index: 1;
}
btn.toggle{
    background-color: #fff;
}

.toggle {
	margin: 5px 17px 0 0;
	z-index: 999;
}

/* Body */

.row {
	margin-top: 20px;;
}

.greyed-section {
	background-color: rgba(230, 230, 230, 0.3);
    padding-top: 20px;
}

/* Header */

.header {
	display: table;
	position: relative;
	margin: 20px auto;
	width: 100%;
}
strong.higlighted{
    color: rgba(51, 154, 240, .8);
}

/* About */

.about {
	padding: 50px 0;
}

/* Skillset */

.skillset {
	padding: 50px 0;
}

.skill-item {
	margin-bottom: 30px;
}
i.text-secondary {
    color: rgba(51, 154, 240, .8)!important;
}

/* Callout */

.callout {
	display: table;
	width: 100%;
	height: 400px;
	color: #fff;
	background: url(../img/callout.jpg) no-repeat center center scroll;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	-o-background-size: cover;
}

/* Portfolio */
.portfolio-item {
	margin: 10px;
    border: 15px inset rgba(51, 154, 240, .1);
    border-radius: 10%;
	display: inline-block;
	position: relative;
}
.portfolio-item a {
	font-size: 30px;
	bottom: 30px;
    display: block;
    overflow: hidden;
}
.coming-soon {
    height: 94%;
    overflow: hidden;
}
/* Footer */

footer {
	padding: 100px 0;
}

